--- a/02-Loss-Distributions.Rmd
+++ b/02-Loss-Distributions.Rmd
@@ -5,7 +5,58 @@ Loss distributions
 tutorial::go_interactive()
 ```
 
-## Introduction
+
+
+## Introduction 
+
+The main objective of the course is to provide methods for analysing insurance data leading to decisions with an emphasis in an insurance context.
+
+### The importance of insurance or the benefits of insurance for society
+
+Let us begin with the importance of insurance or the benefits of insurance for society. 
+
+The insurer protects the wealth of society through a variety of insurance plans. Life insurance provides protection against loss of human wealth. General insurance protects property from damage by fire, theft, accidents, earthquakes, etc. Consequently, both general insurance and life insurance provide security to maintain financial and business conditions.
+
+
+The **insurance policy** is a contract between the insurer and the policyholder, which sets out the claims that the insurer is legally obliged to pay.  The insurer guarantees compensation for losses caused by risks covered by the insurance policy, called the insurance claim in return for an initial payment, called the **premium**.
+
+### The types of insurance
+
+Families and organisations that do not want to bear their own risks can choose from a variety of insurance policies.The following questions can be asked about an insurance policy ([Click here for more details](https://saylordotorg.github.io/text_risk-management-for-enterprises-and-individuals/s10-04-types-of-insurance-and-insurer.html)):
+
+- **the nature of insurance is who buys it:** Is it a personal, group or commercial?
+
+- **the nature of insurance is the type of risk being covered:** Is it a life/health insurance policy or a property/casualty policy?
+
+- **the nature of insurance is by the duration of an insurance contract, known as the term:** Is it a short-term or a long-term contract?
+
+- Is it issued by a private insurer or a government agency?
+
+- Was it taken out voluntarily or involuntarily?
+
+**Notes** 
+
+1. The amount of benefits provided by life insurance policies is often specified in the policies. In contrast, most non-life insurance policies provide compensation for insured losses that were not known prior to the event (usually the compensation amounts are limited). 
+
+2. The time value of money is important in a life insurance contract that runs over a long period of time. In a non-life contract, the random amount of compensation takes priority.
+
+### Insurance Operations and Data Analytics
+
+The ultimate goal is to use insurance data as a basis for decision-making. Throughout the course, we will learn more about techniques for analysing and extrapolating data. To begin with, we will describe five key operational areas of insurance companies and highlight the role of data and analytics in each operational area.
+
+1. **Initiate insurance:** The company decides at this stage whether or not to accept a risk (the underwriting step) and then determines the appropriate premium (or rate). The basics of insurance analysis are found in ratemaking, where analysts try to find the appropriate price for the appropriate risk.
+
+2. **Renewal of insurance:** Many policies, especially in general insurance, are only valid for a few months or a year. The insurer has the option of refusing cover and changing the premium, even though it assumes that such contracts would be renewed. The purpose of this phase of policy renewal, where analytics are also used, is to retain profitable customers.
+
+3. **Claims management:** Analytics have been used for years to (1) identify claims.
+and prevent claims fraud, (2) control claims costs, including identifying the right type of support to cover the costs associated with claims handling, and (3) capture additional layers for reinsurance and retention.
+
+4. **Reserves for losses:** Management obtains an accurate estimate of future responsibilities using analytical techniques, and the uncertainty of these predictions is quantified.
+
+5. **Capital allocation and solvency:** Among the important analytical operations is the choice of the amount of capital required and its allocation to the various investments. Companies need to be aware of their capital requirements in order to have sufficient cash flow to meet their obligations when they are likely to occur (solvency). This is an important concern not only for management, but also for clients, shareholders, regulators and the public.
+
+
+## Loss Distributions
 
 
 The aim of the course is to provide a fundamental basis which applies
