--- a/docs/SCMA470BookdownprojChapter1Slides.tex
+++ b/docs/SCMA470BookdownprojChapter1Slides.tex
@@ -127,7 +127,7 @@
 \usepackage[]{natbib}
 \bibliographystyle{apalike}
 
-\title{\textbf{SCMA 470 : Risk Analysis and Credibility} \textbf{Tutorial 3}}
+\title{\textbf{SCMA 470 : Risk Analysis and Credibility}}
 \author{Pairote Satiracoo}
 \date{2022-08-22}
 
