--- a/docs/SCMA470BookdownprojChapter4Slides.tex
+++ b/docs/SCMA470BookdownprojChapter4Slides.tex
@@ -128,7 +128,7 @@
 \usepackage[]{natbib}
 \bibliographystyle{apalike}
 
-\title{\textbf{SCMA 470 : Risk Analysis and Credibility} \textbf{Tutorial 3}}
+\title{\textbf{SCMA 470 : Risk Analysis and Credibility}}
 \author{Pairote Satiracoo}
 \date{2021-09-23}
 
